// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - App renders correctly /final route 1`] = `
<div
  className="sc-dnqmqq icmAsQ"
>
  <div
    className="sc-htoDjs eRfIlK"
  >
    <header>
      <a
        className="sc-gzVnrw hiHaTe"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="100%"
          id="randstad_sourceright"
          version="1.1"
          viewBox="15 0 400 50"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M32.9,39.9h4.2V29.4c0-0.6-0.2-1.1-0.6-1.5l-6.2-6.2c-0.4-0.4-0.9-0.6-1.5-0.6H18.2v4.2h11.6c1.7,0,3.2,1.4,3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M43.3,39.9h-4.2V29.4c0-0.6,0.2-1.1,0.6-1.5l6.2-6.2c0.4-0.4,0.9-0.6,1.5-0.6h10.6v4.2H46.5c-1.7,0-3.2,1.4-3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M77.1,21h3.2v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M183.7,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM173.6,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L173.6,25.3z"
            fill="#fff"
          />
          <path
            d="M99.5,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM89.3,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L89.3,25.3z"
            fill="#fff"
          />
          <path
            d="M105.8,21h3.4v3h0.1c1-2.1,3.6-3.4,6.2-3.4c4.9,0,7.1,3,7.1,8.1v11.3H119v-9.8c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M145.2,36.3c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.8,8.2,8.8c0,4.1-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L145.2,36.3z"
            fill="#fff"
          />
          <path
            d="M170.1,23.8h-5v10.4c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.8h-4.3V21h4.3v-4.4l3.5-1.1V21h5V23.8z"
            fill="#fff"
          />
          <path
            d="M193.3,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C194.7,37.6,193.2,33.4,193.3,30.4z M204.2,39.9h3.3V12.1h-3.5v11.5H204c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <path
            d="M128.6,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C130.1,37.6,128.5,33.4,128.6,30.4z M139.5,39.9h3.3V12.1h-3.5v11.5h-0.1c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <g>
            <path
              d="M222.4,36.1c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.7,8.2,8.8c0,4-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L222.4,36.1z"
              fill="#fff"
            />
            <path
              d="M245.2,20.5c5.8,0,9.6,4.2,9.6,9.9c0,5.4-3.9,9.9-9.6,9.9c-5.7,0-9.6-4.5-9.6-9.9C235.5,24.6,239.4,20.5,245.2,20.5z M245.2,37.4c4.1,0,5.9-3.7,5.9-7.1c0-3.6-2.2-7.1-5.9-7.1c-3.7,0-5.9,3.5-5.9,7.1C239.2,33.7,241,37.4,245.2,37.4z"
              fill="#fff"
            />
            <path
              d="M273.9,39.8h-3.4v-3h-0.1c-1,2.1-3.6,3.4-6.2,3.4c-4.9,0-7.1-3-7.1-8.1V20.9h3.5v9.8c0,4.4,1,6.6,4,6.8c4,0,5.8-3.2,5.8-7.8v-8.8h3.5V39.8z"
              fill="#fff"
            />
            <path
              d="M278,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6H278V20.9z"
              fill="#fff"
            />
            <path
              d="M301.9,24.1c-1.3-0.6-2.7-0.8-3.8-0.8c-3.9,0-6.1,3.5-6.1,7.1c0,3.4,1.8,7.1,6.3,7.1c1.2,0,2.7-0.4,3.7-1.1l0.3,3.1c-1.4,0.7-3.1,0.8-4.4,0.8c-5.7,0-9.6-4.5-9.6-9.9c0-5.8,3.9-9.9,9.6-9.9c1.4,0,3.2,0.3,4.2,0.7L301.9,24.1z"
              fill="#fff"
            />
            <path
              d="M319,39c-1.3,0.5-2.9,1.2-6,1.2c-6.7,0-9.8-4.1-9.8-10.2c0-5.6,3.5-9.6,8.9-9.6c6.3,0,8.3,4.6,8.3,10.7h-13.5c0,3.7,2.9,6.3,6.2,6.3c2.3,0,5-1.2,5.8-1.9V39z M316.7,28.5c0-2.9-1.7-5.3-4.7-5.3c-3.4,0-4.8,2.8-5.1,5.3H316.7z"
              fill="#fff"
            />
            <path
              d="M323.3,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M340,16.7h-3.9v-3.9h3.9V16.7z M336.3,20.9h3.5v18.9h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M361,39c0,5.7-3,9-9.8,9c-2,0-3.7-0.3-6.8-1.3l0.4-3.2c2.7,1.2,4.3,1.7,6.8,1.7c3.7,0,5.9-2.5,5.9-6.5v-1.9h-0.1c-1.5,2-3.9,2.9-6.3,2.9c-5.4,0-8.1-4.4-8.1-9.3c0-4.9,2.7-10,8.5-10c3.3,0,5.2,1.2,6.2,3.3h0.1v-2.8h3.2V39z M357.5,30.6c0-3.9-1.8-7.3-5.5-7.3c-3.5,0-5.3,3.8-5.3,7c0,3.6,2,6.7,5.3,6.7C355.3,37,357.5,34.1,357.5,30.6z"
              fill="#fff"
            />
            <path
              d="M364.7,12h3.5v11.6h0.1c1.3-2,3.5-3.2,6.1-3.2c4.9,0,7.1,3,7.1,8.1v11.2H378V30c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V12z"
              fill="#fff"
            />
            <path
              d="M395.2,23.7h-5v10.3c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.7h-4.3v-2.8h4.3v-4.4l3.5-1.1v5.5h5V23.7z"
              fill="#fff"
            />
          </g>
        </svg>
      </a>
    </header>
  </div>
  <main
    className="sc-bxivhb kpqOmA"
  >
    <section
      className="sc-bdVaJa jihNFi"
    >
      <h1
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 cnPzet"
      >
        Performance Snapshot on RSR Consulting Talent - Consultant:
      </h1>
      <h2
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 jgvbu"
      >
        
      </h2>
      <section
        className="sc-EHOje epWACv"
      >
        <p
          className="sc-htpNat kvSJNm"
        >
          The feedback you provide will be used for individual development and career pathway and forms part of RSR Reward and Recognition scheme.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          Feedback will also be used to enhance and evolve individual contribution to your organisation.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          We therefore ask you to provide feedback based on factual evidence only and we may ask you for further information in some individual performance feedback.
        </p>
      </section>
      <a
        href="/"
        onClick={[Function]}
      >
        <button
          className="sc-bZQynM iuADUF StyledButton-sc-323bzc-0 bmExQD"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size="large"
          type="button"
        >
          start
        </button>
      </a>
    </section>
  </main>
  <footer
    className="sc-iwsKbI wVffR"
  >
    <p
      className="sc-htpNat kvSJNm"
    >
      Randstad Sourceright (Hong Kong SAR) EA Licence No. 57155 | Randstad Sourceright (Singapore) EA Licence No. 94C3609
    </p>
  </footer>
</div>
`;

exports[`COMPONENT - App renders correctly default route 1`] = `
<div
  className="sc-dnqmqq icmAsQ"
>
  <div
    className="sc-htoDjs eRfIlK"
  >
    <header>
      <a
        className="sc-gzVnrw hiHaTe"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="100%"
          id="randstad_sourceright"
          version="1.1"
          viewBox="15 0 400 50"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M32.9,39.9h4.2V29.4c0-0.6-0.2-1.1-0.6-1.5l-6.2-6.2c-0.4-0.4-0.9-0.6-1.5-0.6H18.2v4.2h11.6c1.7,0,3.2,1.4,3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M43.3,39.9h-4.2V29.4c0-0.6,0.2-1.1,0.6-1.5l6.2-6.2c0.4-0.4,0.9-0.6,1.5-0.6h10.6v4.2H46.5c-1.7,0-3.2,1.4-3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M77.1,21h3.2v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M183.7,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM173.6,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L173.6,25.3z"
            fill="#fff"
          />
          <path
            d="M99.5,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM89.3,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L89.3,25.3z"
            fill="#fff"
          />
          <path
            d="M105.8,21h3.4v3h0.1c1-2.1,3.6-3.4,6.2-3.4c4.9,0,7.1,3,7.1,8.1v11.3H119v-9.8c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M145.2,36.3c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.8,8.2,8.8c0,4.1-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L145.2,36.3z"
            fill="#fff"
          />
          <path
            d="M170.1,23.8h-5v10.4c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.8h-4.3V21h4.3v-4.4l3.5-1.1V21h5V23.8z"
            fill="#fff"
          />
          <path
            d="M193.3,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C194.7,37.6,193.2,33.4,193.3,30.4z M204.2,39.9h3.3V12.1h-3.5v11.5H204c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <path
            d="M128.6,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C130.1,37.6,128.5,33.4,128.6,30.4z M139.5,39.9h3.3V12.1h-3.5v11.5h-0.1c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <g>
            <path
              d="M222.4,36.1c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.7,8.2,8.8c0,4-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L222.4,36.1z"
              fill="#fff"
            />
            <path
              d="M245.2,20.5c5.8,0,9.6,4.2,9.6,9.9c0,5.4-3.9,9.9-9.6,9.9c-5.7,0-9.6-4.5-9.6-9.9C235.5,24.6,239.4,20.5,245.2,20.5z M245.2,37.4c4.1,0,5.9-3.7,5.9-7.1c0-3.6-2.2-7.1-5.9-7.1c-3.7,0-5.9,3.5-5.9,7.1C239.2,33.7,241,37.4,245.2,37.4z"
              fill="#fff"
            />
            <path
              d="M273.9,39.8h-3.4v-3h-0.1c-1,2.1-3.6,3.4-6.2,3.4c-4.9,0-7.1-3-7.1-8.1V20.9h3.5v9.8c0,4.4,1,6.6,4,6.8c4,0,5.8-3.2,5.8-7.8v-8.8h3.5V39.8z"
              fill="#fff"
            />
            <path
              d="M278,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6H278V20.9z"
              fill="#fff"
            />
            <path
              d="M301.9,24.1c-1.3-0.6-2.7-0.8-3.8-0.8c-3.9,0-6.1,3.5-6.1,7.1c0,3.4,1.8,7.1,6.3,7.1c1.2,0,2.7-0.4,3.7-1.1l0.3,3.1c-1.4,0.7-3.1,0.8-4.4,0.8c-5.7,0-9.6-4.5-9.6-9.9c0-5.8,3.9-9.9,9.6-9.9c1.4,0,3.2,0.3,4.2,0.7L301.9,24.1z"
              fill="#fff"
            />
            <path
              d="M319,39c-1.3,0.5-2.9,1.2-6,1.2c-6.7,0-9.8-4.1-9.8-10.2c0-5.6,3.5-9.6,8.9-9.6c6.3,0,8.3,4.6,8.3,10.7h-13.5c0,3.7,2.9,6.3,6.2,6.3c2.3,0,5-1.2,5.8-1.9V39z M316.7,28.5c0-2.9-1.7-5.3-4.7-5.3c-3.4,0-4.8,2.8-5.1,5.3H316.7z"
              fill="#fff"
            />
            <path
              d="M323.3,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M340,16.7h-3.9v-3.9h3.9V16.7z M336.3,20.9h3.5v18.9h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M361,39c0,5.7-3,9-9.8,9c-2,0-3.7-0.3-6.8-1.3l0.4-3.2c2.7,1.2,4.3,1.7,6.8,1.7c3.7,0,5.9-2.5,5.9-6.5v-1.9h-0.1c-1.5,2-3.9,2.9-6.3,2.9c-5.4,0-8.1-4.4-8.1-9.3c0-4.9,2.7-10,8.5-10c3.3,0,5.2,1.2,6.2,3.3h0.1v-2.8h3.2V39z M357.5,30.6c0-3.9-1.8-7.3-5.5-7.3c-3.5,0-5.3,3.8-5.3,7c0,3.6,2,6.7,5.3,6.7C355.3,37,357.5,34.1,357.5,30.6z"
              fill="#fff"
            />
            <path
              d="M364.7,12h3.5v11.6h0.1c1.3-2,3.5-3.2,6.1-3.2c4.9,0,7.1,3,7.1,8.1v11.2H378V30c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V12z"
              fill="#fff"
            />
            <path
              d="M395.2,23.7h-5v10.3c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.7h-4.3v-2.8h4.3v-4.4l3.5-1.1v5.5h5V23.7z"
              fill="#fff"
            />
          </g>
        </svg>
      </a>
    </header>
  </div>
  <main
    className="sc-bxivhb kpqOmA"
  >
    <section
      className="sc-bdVaJa jihNFi"
    >
      <h1
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 cnPzet"
      >
        Performance Snapshot on RSR Consulting Talent - Consultant:
      </h1>
      <h2
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 jgvbu"
      >
        
      </h2>
      <section
        className="sc-EHOje epWACv"
      >
        <p
          className="sc-htpNat kvSJNm"
        >
          The feedback you provide will be used for individual development and career pathway and forms part of RSR Reward and Recognition scheme.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          Feedback will also be used to enhance and evolve individual contribution to your organisation.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          We therefore ask you to provide feedback based on factual evidence only and we may ask you for further information in some individual performance feedback.
        </p>
      </section>
      <a
        href="/"
        onClick={[Function]}
      >
        <button
          className="sc-bZQynM iuADUF StyledButton-sc-323bzc-0 bmExQD"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size="large"
          type="button"
        >
          start
        </button>
      </a>
    </section>
  </main>
  <footer
    className="sc-iwsKbI wVffR"
  >
    <p
      className="sc-htpNat kvSJNm"
    >
      Randstad Sourceright (Hong Kong SAR) EA Licence No. 57155 | Randstad Sourceright (Singapore) EA Licence No. 94C3609
    </p>
  </footer>
</div>
`;

exports[`COMPONENT - App renders correctly survey route 1`] = `
<div
  className="sc-dnqmqq icmAsQ"
>
  <div
    className="sc-htoDjs eRfIlK"
  >
    <header>
      <a
        className="sc-gzVnrw hiHaTe"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="100%"
          id="randstad_sourceright"
          version="1.1"
          viewBox="15 0 400 50"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M32.9,39.9h4.2V29.4c0-0.6-0.2-1.1-0.6-1.5l-6.2-6.2c-0.4-0.4-0.9-0.6-1.5-0.6H18.2v4.2h11.6c1.7,0,3.2,1.4,3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M43.3,39.9h-4.2V29.4c0-0.6,0.2-1.1,0.6-1.5l6.2-6.2c0.4-0.4,0.9-0.6,1.5-0.6h10.6v4.2H46.5c-1.7,0-3.2,1.4-3.2,3.2V39.9z"
            fill="#fff"
          />
          <path
            d="M77.1,21h3.2v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M183.7,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM173.6,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L173.6,25.3z"
            fill="#fff"
          />
          <path
            d="M99.5,32.6c0,2.9-1.8,5-5.3,5c-1.6,0-3.5-1.1-3.5-3.1c0-3.4,4.7-3.7,6.6-3.7c0.7,0,1.5,0.1,2.2,0.1V32.6zM89.3,25.3c1.4-1.2,3.5-2,5.5-2c3.5,0,4.7,1.7,4.7,5c-1.4-0.1-2.3-0.1-3.7-0.1c-3.6,0-8.8,1.5-8.8,6.2c0,4.2,2.9,5.9,6.9,5.9c3.2,0,5-1.7,5.9-2.9h0.1v2.4h3.1V28.4c0-5.2-2.2-7.8-7.6-7.8c-2.4,0-4.5,0.7-6.2,1.8L89.3,25.3z"
            fill="#fff"
          />
          <path
            d="M105.8,21h3.4v3h0.1c1-2.1,3.6-3.4,6.2-3.4c4.9,0,7.1,3,7.1,8.1v11.3H119v-9.8c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V21z"
            fill="#fff"
          />
          <path
            d="M145.2,36.3c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.8,8.2,8.8c0,4.1-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L145.2,36.3z"
            fill="#fff"
          />
          <path
            d="M170.1,23.8h-5v10.4c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.8h-4.3V21h4.3v-4.4l3.5-1.1V21h5V23.8z"
            fill="#fff"
          />
          <path
            d="M193.3,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C194.7,37.6,193.2,33.4,193.3,30.4z M204.2,39.9h3.3V12.1h-3.5v11.5H204c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <path
            d="M128.6,30.4c-0.1-3.5,1.4-7.1,5.2-7.1c3.8,0,5.6,3.6,5.6,7.2c0,3.2-1.6,7.1-5.6,7.1C130.1,37.6,128.5,33.4,128.6,30.4z M139.5,39.9h3.3V12.1h-3.5v11.5h-0.1c-1.1-1.7-3-3-6.3-3c-5.5,0-8.2,4.5-8.2,9.6c0,5.2,2.4,10.3,8.1,10.3c3.4,0,5.5-1.7,6.5-3.1h0.1V39.9z"
            fill="#fff"
          />
          <g>
            <path
              d="M222.4,36.1c1.4,0.9,3.3,1.3,4.3,1.3c1.6,0,3.6-0.7,3.6-2.7c0-3.5-8.2-3.2-8.2-8.5c0-3.9,2.9-5.8,6.7-5.8c1.6,0,3,0.3,4.3,0.7l-0.3,3c-0.8-0.5-2.9-1-3.7-1c-1.8,0-3.3,0.7-3.3,2.3c0,3.9,8.2,2.7,8.2,8.8c0,4-3.2,5.9-6.6,5.9c-1.8,0-3.6-0.2-5.2-1L222.4,36.1z"
              fill="#fff"
            />
            <path
              d="M245.2,20.5c5.8,0,9.6,4.2,9.6,9.9c0,5.4-3.9,9.9-9.6,9.9c-5.7,0-9.6-4.5-9.6-9.9C235.5,24.6,239.4,20.5,245.2,20.5z M245.2,37.4c4.1,0,5.9-3.7,5.9-7.1c0-3.6-2.2-7.1-5.9-7.1c-3.7,0-5.9,3.5-5.9,7.1C239.2,33.7,241,37.4,245.2,37.4z"
              fill="#fff"
            />
            <path
              d="M273.9,39.8h-3.4v-3h-0.1c-1,2.1-3.6,3.4-6.2,3.4c-4.9,0-7.1-3-7.1-8.1V20.9h3.5v9.8c0,4.4,1,6.6,4,6.8c4,0,5.8-3.2,5.8-7.8v-8.8h3.5V39.8z"
              fill="#fff"
            />
            <path
              d="M278,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6H278V20.9z"
              fill="#fff"
            />
            <path
              d="M301.9,24.1c-1.3-0.6-2.7-0.8-3.8-0.8c-3.9,0-6.1,3.5-6.1,7.1c0,3.4,1.8,7.1,6.3,7.1c1.2,0,2.7-0.4,3.7-1.1l0.3,3.1c-1.4,0.7-3.1,0.8-4.4,0.8c-5.7,0-9.6-4.5-9.6-9.9c0-5.8,3.9-9.9,9.6-9.9c1.4,0,3.2,0.3,4.2,0.7L301.9,24.1z"
              fill="#fff"
            />
            <path
              d="M319,39c-1.3,0.5-2.9,1.2-6,1.2c-6.7,0-9.8-4.1-9.8-10.2c0-5.6,3.5-9.6,8.9-9.6c6.3,0,8.3,4.6,8.3,10.7h-13.5c0,3.7,2.9,6.3,6.2,6.3c2.3,0,5-1.2,5.8-1.9V39z M316.7,28.5c0-2.9-1.7-5.3-4.7-5.3c-3.4,0-4.8,2.8-5.1,5.3H316.7z"
              fill="#fff"
            />
            <path
              d="M323.3,20.9h3.3v2.9h0.1c0.9-2,2.9-3.4,4.9-3.4c1,0,1.6,0.1,2.3,0.3v3.1c-0.6-0.3-1.3-0.3-1.9-0.3c-3.1,0-5.2,3-5.2,7.7v8.6h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M340,16.7h-3.9v-3.9h3.9V16.7z M336.3,20.9h3.5v18.9h-3.5V20.9z"
              fill="#fff"
            />
            <path
              d="M361,39c0,5.7-3,9-9.8,9c-2,0-3.7-0.3-6.8-1.3l0.4-3.2c2.7,1.2,4.3,1.7,6.8,1.7c3.7,0,5.9-2.5,5.9-6.5v-1.9h-0.1c-1.5,2-3.9,2.9-6.3,2.9c-5.4,0-8.1-4.4-8.1-9.3c0-4.9,2.7-10,8.5-10c3.3,0,5.2,1.2,6.2,3.3h0.1v-2.8h3.2V39z M357.5,30.6c0-3.9-1.8-7.3-5.5-7.3c-3.5,0-5.3,3.8-5.3,7c0,3.6,2,6.7,5.3,6.7C355.3,37,357.5,34.1,357.5,30.6z"
              fill="#fff"
            />
            <path
              d="M364.7,12h3.5v11.6h0.1c1.3-2,3.5-3.2,6.1-3.2c4.9,0,7.1,3,7.1,8.1v11.2H378V30c0-4.4-1-6.6-4-6.8c-4,0-5.8,3.2-5.8,7.8v8.8h-3.5V12z"
              fill="#fff"
            />
            <path
              d="M395.2,23.7h-5v10.3c0,2.2,1.3,3.4,2.9,3.4c1.1,0,1.9-0.3,2.4-0.7v3c-0.8,0.2-1.9,0.5-3,0.5c-3.6,0-5.8-1.7-5.8-5.5V23.7h-4.3v-2.8h4.3v-4.4l3.5-1.1v5.5h5V23.7z"
              fill="#fff"
            />
          </g>
        </svg>
      </a>
    </header>
  </div>
  <main
    className="sc-bxivhb kpqOmA"
  >
    <section
      className="sc-bdVaJa jihNFi"
    >
      <h1
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 cnPzet"
      >
        Performance Snapshot on RSR Consulting Talent - Consultant:
      </h1>
      <h2
        className="sc-bwzfXH fIpTJf StyledHeading-sc-1rdh4aw-0 jgvbu"
      >
        
      </h2>
      <section
        className="sc-EHOje epWACv"
      >
        <p
          className="sc-htpNat kvSJNm"
        >
          The feedback you provide will be used for individual development and career pathway and forms part of RSR Reward and Recognition scheme.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          Feedback will also be used to enhance and evolve individual contribution to your organisation.
        </p>
        <p
          className="sc-htpNat kvSJNm"
        >
          We therefore ask you to provide feedback based on factual evidence only and we may ask you for further information in some individual performance feedback.
        </p>
      </section>
      <a
        href="/survey"
        onClick={[Function]}
      >
        <button
          className="sc-bZQynM iuADUF StyledButton-sc-323bzc-0 bmExQD"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size="large"
          type="button"
        >
          start
        </button>
      </a>
    </section>
  </main>
  <footer
    className="sc-iwsKbI wVffR"
  >
    <p
      className="sc-htpNat kvSJNm"
    >
      Randstad Sourceright (Hong Kong SAR) EA Licence No. 57155 | Randstad Sourceright (Singapore) EA Licence No. 94C3609
    </p>
  </footer>
</div>
`;
